k8s/yaml/nginx-ingress/test/http-nginx/nginx-nfs/nginx-ingress.yaml
# kubectl run --image=nginx nginx --replicas=2
# kubectl expose deployment nginx --port=80  ## 这里是svc端口,默认和容器的端口一致

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-nginx-ingress
  namespace: default
spec:
  rules:
  - host: mynginx.maotai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-nginx
          servicePort: 80
