k8s/yaml/nginx-ingress/test/http-nginx/nginx-nfs/nginx-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: TCP
    targetPort: 80
